--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "",
-  "version": "0.0.1",
-  "license": "",
-  "repository": "",
-  "scripts": {
-    "preinstall": "sam/build.sh",
-    "test": "tape test/test.js"
-  },
-  "dependencies": {
-    "async": "^2.0.0-rc.6",
-    "body-parser": "^1.15.1",
-    "compression": "^1.6.2",
-    "cors": "^2.7.1",
-    "express": "^4.13.4",
-    "shelljs": "^0.7.0"
-  },
-  "devDependencies": {
-    "supertest": "^1.2.0",
-    "tape": "^4.5.1"
-  }
+    "name": "bam-server",
+    "description": "",
+    "version": "0.0.1",
+    "license": "GPL-3.0",
+    "author": "Francisco Salavert Torres <frasator@gmail.com>",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/frasator/bam-server.git"
+    },
+    "scripts": {
+        "preinstall": "sam/build.sh",
+        "test": "tape test/test.js"
+    },
+    "dependencies": {
+        "async": "^2.1.5",
+        "body-parser": "^1.15.1",
+        "compression": "^1.6.2",
+        "cors": "^2.7.1",
+        "express": "^4.13.4",
+        "shelljs": "^0.7.7"
+    },
+    "devDependencies": {
+        "supertest": "^1.2.0",
+        "tape": "^4.5.1"
+    }
 }
